fixed scrollbar and overlap issue

--- a/src/components/Review/Review.scss
+++ b/src/components/Review/Review.scss
@@ -1,7 +1,6 @@
 .container{
   display: inline-block; 
   text-align: center;
-  position: fixed;
   left: 400px;
   top:300px;
 
