--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -2,7 +2,6 @@
 
 .holder{
     /* overflow: auto; */
-    position: absolute;
     top:100px;
      left:250px;  
 
